; ModuleID = '/home/carl/AnghaBench/mpv/filters/extr_f_utils.c_mark_progress.c'
source_filename = "/home/carl/AnghaBench/mpv/filters/extr_f_utils.c_mark_progress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_subfilter = type { i32 }
%struct.mp_filter = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mp_subfilter*)* @mark_progress to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mark_progress(%struct.mp_subfilter* %0) #0 {
  %2 = alloca %struct.mp_subfilter*, align 8
  %3 = alloca %struct.mp_filter*, align 8
  store %struct.mp_subfilter* %0, %struct.mp_subfilter** %2, align 8
  %4 = load %struct.mp_subfilter*, %struct.mp_subfilter** %2, align 8
  %5 = getelementptr inbounds %struct.mp_subfilter, %struct.mp_subfilter* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call %struct.mp_filter* @mp_pin_get_manual_connection(i32 %6)
  store %struct.mp_filter* %7, %struct.mp_filter** %3, align 8
  %8 = load %struct.mp_filter*, %struct.mp_filter** %3, align 8
  %9 = icmp ne %struct.mp_filter* %8, null
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load %struct.mp_filter*, %struct.mp_filter** %3, align 8
  %12 = call i32 @mp_filter_internal_mark_progress(%struct.mp_filter* %11)
  br label %13

13:                                               ; preds = %10, %1
  ret void
}

declare dso_local %struct.mp_filter* @mp_pin_get_manual_connection(i32) #1

declare dso_local i32 @mp_filter_internal_mark_progress(%struct.mp_filter*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
